{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "5103d021-1b7f-49b7-85da-1379ce8d3967",
            "actions": [
                {
                    "name": "TypeCharacter",
                    "type": "PassThrough",
                    "id": "098f0a8a-11c4-41a5-833b-3d15ffb6c359",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClearInput",
                    "type": "Button",
                    "id": "ea226d45-d569-457f-a69d-70c6144280c8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ConfirmInput",
                    "type": "Button",
                    "id": "a6b1f6b6-0534-492a-9cc6-239b9843d91d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ba400926-d16c-438d-8d7a-c3fab3502377",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TypeCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f59ee3a0-db12-42ce-96ef-5609312538f3",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClearInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c51d19e-a02a-439c-b960-918e15d210e1",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}